# ESP32_CAN

./: .gitignore
include/: application.hpp  bg_task.h  bms_communication.h  generic_hardware_interface.h  interrupt_handler.h
src/: application.cpp  bg_task.c  bms_communication.c  interrupt_handler.c  main.cpp
test/: main_test.c  meson.build
test/mocks/Inc/: can_mock.h  cpu_it.h
test/mocks/Src/: can_mock.c
test/modules/bms_communication/: bms_communication_test.c  bms_communication_test_runner.c
test/unity/: unity.c  unity.h  unity_fixture.c  unity_fixture.h  unity_fixture_internals.h  unity_memory.c  unity_memory.h
